# corpus

./: .gitignore  .gitmodules  CONTRIBUTING.md  Cargo.toml  Dockerfile.alpine  Dockerfile.go  Dockerfile.jars  Dockerfile.static  Earthfile  LICENSE.md  Makefile  README.md  README.md.tmpl  assembly.md  building.md  challenges.md  dependencies.json  docker-compose.yaml  go.mod  go.sum  missing_submodules.md  projects.json  sources.md
c/: Earthfile  bvisness.dockerfile  bvisness.json  cedricschwyter.dockerfile  cedricschwyter.json  hogelog.dockerfile  hogelog.json  koturn.dockerfile  koturn.json  kspalaiologos-asm2ws.dockerfile  kspalaiologos-asm2ws.json  manarice.dockerfile  manarice.json  meth0dz.dockerfile  meth0dz.json  rdebath.dockerfile  rdebath.json  remigascou.dockerfile  remigascou.json  rispoli-txt2ws.dockerfile  rispoli-txt2ws.json  sandeep.dockerfile  sandeep.json  shinh-elvm.dockerfile  shinh-elvm.json  ssiegl-wsdebug.dockerfile  ssiegl-wsdebug.json  stellwag-wspacegen.dockerfile  stellwag-wspacegen.json  strangepan-i-c-whitespace.dockerfile  strangepan-i-c-whitespace.json  subgeniuskitty-vvhitespace.dockerfile  subgeniuskitty-vvhitespace.json  tejaskasetty.dockerfile  tejaskasetty.json  threeifbywhiskey-blacktime.dockerfile  threeifbywhiskey-blacktime.json  threeifbywhiskey-satan.dockerfile  threeifbywhiskey-satan.json  zackeua.dockerfile  (+1 more)
tools/types/: Cargo.toml
tools/types/src/: lib.rs  project.rs  ws.rs
tools/types/src/project/: file.rs  mod.rs  types.rs
tools/types/src/util/: error.rs  float.rs  int.rs  mod.rs  one_or_vec.rs  string.rs
(+1232 files in other folders)
