[package]
name = "corpus-types"
version = "0.1.0"
authors = ["Thalia Archibald <thalia@archibald.dev>"]
edition = "2021"
license = "MIT"

[dependencies]
glob = "0.3"
rug = { version = "1.20", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.1"
strum = { version = "0.25", features = ["derive"] }
thiserror = "1.0"
